[tool.poetry]
name = "reflexionagent"
version = "0.1.0"
description = ""
authors = ["Homayoun <hsohrab23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
langchain-openai = "^0.1.21"
langchain-core = "^0.2.29"
langgraph = "^0.2.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
